--- a/src/Restourant.Web/wwwroot/css/login.css
+++ b/src/Restourant.Web/wwwroot/css/login.css
@@ -12,7 +12,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: var(--red-color, red);
+    background: var(--main-brown-color, red);
     padding: 3.3em;
     border-radius: 2.5em;
 }
