--- a/src/Restourant.Web/Areas/Tables/Views/Tables/All.cshtml
+++ b/src/Restourant.Web/Areas/Tables/Views/Tables/All.cshtml
@@ -33,7 +33,7 @@
                     <a class="table-button">Details</a>
                     @if (table.Status != "Off")
                     {
-                        <a class="table-button">Add Order</a>
+                        <a class="staff-button">Add Order</a>
                     }
                 </div>
                 </div>
