--- a/src/Restourant.Web/wwwroot/css/menu.css
+++ b/src/Restourant.Web/wwwroot/css/menu.css
@@ -105,9 +105,11 @@
     margin: 0 1.3em;
 }
 
-.menu-create-order input {
+.menu-create-order a {
     margin-left: 2em;
     border-radius: 2em;
     padding: 0.3em;
     border: none;
+    background: white;
+    color: black;
 }
