--- a/src/Restourant.Web/Areas/Orders/Views/Orders/OrdersForUser.cshtml
+++ b/src/Restourant.Web/Areas/Orders/Views/Orders/OrdersForUser.cshtml
@@ -7,7 +7,7 @@
 
     <div class="orders-wrapper">
 
-        <h1>Orders For User: @Model.waiterName</h1>
+        <h1>All orders for employee: @Model.waiterName</h1>
 
         <table>
             <tr>
@@ -22,7 +22,7 @@
                 <tr>
                     <td>@item.ProductName</td>
                     <td>@item.quantity</td>
-                    <td>@item.totalPrice</td>
+                    <td>@item.totalPrice $</td>
                     <td>@item.TableName</td>
                     <td>@item.orderedOn</td>
                 </tr>
