--- a/src/Restourant.Web/wwwroot/css/menu.css
+++ b/src/Restourant.Web/wwwroot/css/menu.css
@@ -23,7 +23,7 @@
 
 .product-card img {
     max-width: 12em !important;
-    height: 12em !important;
+    max-height: 12em !important;
     border-radius: 20em;
 }
 
