Implemented a bit of admin functionality and UI.

--- a/src/Restourant.Web/Areas/Tables/Views/Tables/All.cshtml
+++ b/src/Restourant.Web/Areas/Tables/Views/Tables/All.cshtml
@@ -1,14 +1,14 @@
 ﻿@model TablesAllViewModel
 
 @{
-    ViewData["Title"] = "My Tables";
+    ViewData["Title"] = "All Tables";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div class="tables-intro">
     <h1>@ViewData["Title"]</h1>
-    <h3>Welcome, @this.User.Identity.Name</h3>S
+    <h3>Welcome, @this.User.Identity.Name</h3>
     <div class="table-intro-text">
-        Below are the tables that you are responsible to provide service for.
+        Below are all the tables in the restourant.
     </div>
 </div>
 @{
