--- a/src/Restourant.Web/wwwroot/css/variables.css
+++ b/src/Restourant.Web/wwwroot/css/variables.css
@@ -8,5 +8,6 @@
     /*Layout colours*/
     --main-brown-color: #4a2926;
     --main-gray-color: #666666;
-    --staff-color: #03adfc
+    --staff-color: #03adfc;
+    --admin-color: #00b11f;
 }
