Added create product functionality to admin panel, autoamted the process of mgiartion/creation of the database and seeding it with that. Yeah, that no longer requrieres you to manually create the db and use the sandbox to seed it. Added status to orders and with that the functioanlity of Chef and Bartender has also benn included. The Order can now be tracked and the waiter will see when the kitchen product is ready to be served as well as the order on the bartender.

--- a/src/Restourant.Web/Areas/Orders/Views/Orders/CreateOrder.cshtml
+++ b/src/Restourant.Web/Areas/Orders/Views/Orders/CreateOrder.cshtml
@@ -15,7 +15,7 @@
         <form asp-area="Orders" asp-controller="Orders" asp-action="CreateOrder" method="post" enctype="multipart/form-data">
             <label asp-for="@Model.Quantity">Quantity:</label>
             <input asp-for="@Model.Quantity" type="number" name="quantity" value="0" />
-            <span asp-validation-for="@Model.Quantity"></span>
+            <span asp-validation-for="@Model.Quantity" class="validation-error"></span>
 
             <p>Please select the table you are currently sitting on.</p>
             <select asp-items="availableTables" asp-for="@Model.DisplayTable"></select>
