--- a/src/Restourant.Web/Areas/Orders/Views/Orders/OrdersForBar.cshtml
+++ b/src/Restourant.Web/Areas/Orders/Views/Orders/OrdersForBar.cshtml
@@ -5,9 +5,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="orders-wrapper">
+<div class="orders-wrapper barman-orders">
 
-    <h1>All orders in the bar, barman: @Model.waiterName</h1>
+    <h1>All orders in the bar, barman: @Model.userName</h1>
     <table>
         <tr>
             <th>Product Name</th>
@@ -22,8 +22,9 @@
                 <td>@item.quantity</td>
                 <td>@item.orderedOn</td>
                 <td>
-                    <form asp-area="Orders" asp-controller="Orders" asp-action="CreatedKitchenOrder" method="post" enctype="multipart/form-data">
-                        <button type="submit" class="submit-order" asp-route-productId="@item.ProductId">Complete order</button>
+                    <form asp-area="Orders" asp-controller="Orders" asp-action="ChangeStatusOfOrder" method="post">
+                        <input type="hidden" value="@item.OrderId" name="OrderId" />
+                        <button type="submit" class="submit-order">Complete order</button>
                     </form>
                 </td>
             </tr>
